# nextjs-fastapi-aws-starter

./: .gitignore  Makefile  PRACTICE_TASKS.txt  README.md  cdk.context.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: CLAUDE.md
app/: config.py  database.py  main.py
app/routes/: items.py  users.py
backend/: handler.py  pyproject.toml
backend/app/: main.py
backend/app/routes/: health.py  items.py
frontend/: .env.local.example  amplify.yml  next.config.mjs  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(protected)/dashboard/: page.tsx
frontend/src/components/: ConfigureAmplify.tsx  Providers.tsx
frontend/src/lib/: amplify-config.ts  api-client.ts
hurl/: users.hurl
infra/: package.json  tsconfig.json
infra/lib/: stack.ts
lib/: stack.ts
lib/constructs/: api.ts  auth.ts  database.ts  network.ts
scripts/: deploy-frontend.sh  post-deploy.sh
test/: users.http
