[project]
name = "fastapi-cdk-starter"
version = "0.1.0"
description = "FastAPI backend — stateless, auth delegated to API Gateway"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic>=2.10.0",
    "boto3>=1.35.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "uvicorn[standard]>=0.32.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
